RESOLVED FIXED235438
[forms] Prevent contenteditable anchors from being stuck
https://bugs.webkit.org/show_bug.cgi?id=235438
Summary [forms] Prevent contenteditable anchors from being stuck
zsun
Reported 2022-01-21 07:04:16 PST
anchors can be stuck in the :active state if contenteditable is enabled before :active is removed.
Attachments
Patch (3.41 KB, patch)
2022-01-21 07:16 PST, zsun
no flags
zsun
Comment 1 2022-01-21 07:16:49 PST
EWS
Comment 2 2022-01-23 09:00:23 PST
Committed r288420 (246311@main): <https://commits.webkit.org/246311@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449651 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-23 09:01:20 PST
Note You need to log in before you can comment on or make changes to this bug.