[forms] Prevent contenteditable anchors from being stuck https://bugs.webkit.org/show_bug.cgi?id=235438

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update 1 WPT test expectation file as the test is now passing.
* web-platform-tests/html/semantics/forms/the-input-element/anchor-active-contenteditable-expected.txt:

Source/WebCore:

Anchors can be stuck in the :active state if contenteditable is enabled before
:active is removed. With this patch setActive() can remove :active during
contenteditable in order to prevent anchors from navigating during contenteditable.

This is an import of Chromium CL at
https://chromium-review.googlesource.com/c/chromium/src/+/2595978

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::setActive):



Canonical link: https://commits.webkit.org/246311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288420 268f45cc-cd09-0410-ab3c-d52691b4dbfc